# 30.4.3_Requests_with_arguments

30.4.3_Requests_with_arguments/: CMakeLists.txt  main.cpp
33.5.2_Fishing_game/include/: fishing.h
33.5.2_Fishing_game/src/: fishing.cpp
37.2_Connecting_interfaces_to_the_application/: simplePhoneMainWindow.h
37.4.1_Graphing_calculator/: CMakeLists.txt
37.4.1_Graphing_calculator/include/: calculator.h
37.4.1_Graphing_calculator/src/: CMakeLists.txt  calculator.cpp  graphingCalc.ui  main.cpp
